@@ -1,5 +1,6 @@
 LIBRARY MQRT.DLL
 EXPORTS
+MQADsPathToFormatName@12
 MQBeginTransaction@4
 MQCloseCursor@4
 MQCloseQueue@4
@@ -13,19 +14,25 @@ MQFreeSecurityContext@4
 MQGetInternalCert@4
 MQGetInternalCertificate@12
 MQGetMachineProperties@12
+MQGetOverlappedResult@4
+MQGetPrivateComputerInformation@8
 MQGetQueueProperties@8
 MQGetQueueSecurity@20
 MQGetSecurityContext@12
+MQGetSecurityContextEx@12
 MQGetUserCerts@12
 MQHandleToFormatName@12
 MQInstanceToFormatName@12
 MQLocateBegin@20
 MQLocateEnd@4
 MQLocateNext@12
+MQMgmtAction@12
+MQMgmtGetInfo@12
 MQOpenQueue@16
 MQPathNameToFormatName@12
 MQPurgeQueue@4
 MQReceiveMessage@32
+MQReceiveMessageByLookupId@32
 MQRegisterUserCert@4
 MQRemoveUserCert@4
 MQSendMessage@12
